--- a/css_index.css
+++ b/css_index.css
@@ -38,7 +38,7 @@
   cursor: pointer;
 }
 .topnav a:active {
-  background-color: #04aa6d;
+  background-color: #0449aa;
   color: black;
   /* color: white; */
 }
@@ -142,3 +142,7 @@
 }
 
 /*text on video css end*/
+
+img {
+  vertical-align: middle;
+}
