--- a/css_index.css
+++ b/css_index.css
@@ -102,3 +102,23 @@ li a:hover:not(.active) {
 }
 /* login button end */
 /* navigation bar end */
+/* content start */
+    .container {
+      display: flex;
+      align-items: center;
+      justify-content: center
+    }
+  
+    img {
+      max-width: 80%;
+    }
+  
+    .image {
+      flex-basis: 40%
+    }
+  
+    .text {
+      font-size: 20px;
+      padding-left: 20px;
+    }
+/* content end */
