--- a/css_index.css
+++ b/css_index.css
@@ -1,31 +1,47 @@
-/* navigation bar start*/
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+/*navgation bar css start*/
+/* #nav {
+  text-align: center;
+  font-size: 20px;
+  
+  color: white;
+} */
+#head1 {
+  display: inline-block;
+  font-family: Brush Script MT;
+  text-align:center;
+  color:white;
+  font-weight:normal;
+  font-size:35px;
+  
+}
+.topnav img{
+  margin:30px 30px 45px;
+  width:50px;
+  height:50px;
+}
+.topnav {
   overflow: hidden;
   background-color: #333;
+  height: 100px;
 }
-
-li {
+.topnav a {
   float: right;
-  margin-top: 20px;
-}
-
-li a {
-  display: block;
-  color: white;
+  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-size: 17px;
+  padding-top: 2.5%;
+
+}
+.topnav a:hover{
+  /* background-color: #ddd; */
+  color: black;
+  cursor: pointer;
 }
 
-li a:hover:not(.active) {
-  /* background-color: #4f3dea; */
-  text-decoration: underline;
-}
-/* login button start*/
-#loginbutton {
+/*login button css start*/
+#loginbutton{
   margin-top: -7.5px;
   font-family: Arial Narrow;
   float: right;
@@ -63,62 +79,57 @@ li a:hover:not(.active) {
   will-change: transform, opacity;
   z-index: 0;
 }
-#loginbutton:hover {
+#loginbutton:hover{
   background-color: #3c4043;
   color: white;
 }
-*#loginbutton {
-  background: #f6f9fe;
-  color: black;
+
+.video-container {
+  position: relative;
 }
-#loginbutton:active {
-  box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%),
-    0 8px 12px 6px rgb(60 64 67 / 15%);
-  outline: none;
+.overlay-desc {
+  background: rgba(0, 0, 0, 0);
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: last baseline;
+  justify-content: center;
+  font-family: "Courier New";
+  color: wheat;
 }
-#loginbutton:focus {
-  outline: none;
-  border: 2px solid #4285f4;
+* {
+  box-sizing: border-box;
 }
-#loginbutton:not(:disabled) {
-  box-shadow: rgba(60, 64, 67, 0.3) 0 1px 3px 0,
-    rgba(60, 64, 67, 0.15) 0 4px 8px 3px;
+body {
+   font-family: Marcellus,sans-serif; /*Verdana, sans-serif; */
+  margin: 0;
 }
-#loginbutton:not(:disabled):hover {
-  box-shadow: rgba(60, 64, 67, 0.3) 0 2px 3px 0,
-    rgba(60, 64, 67, 0.15) 0 6px 10px 4px;
+
+img {
+  vertical-align: middle;
 }
-#loginbutton:not(:disabled):focus {
-  box-shadow: rgba(60, 64, 67, 0.3) 0 1px 3px 0,
-    rgba(60, 64, 67, 0.15) 0 4px 8px 3px;
-}
-#loginbutton:not(:disabled):active {
-  box-shadow: rgba(60, 64, 67, 0.3) 0 4px 4px 0,
-    rgba(60, 64, 67, 0.15) 0 8px 12px 6px;
-}
-#loginbutton:disabled {
-  box-shadow: rgba(60, 64, 67, 0.3) 0 1px 3px 0,
-    rgba(60, 64, 67, 0.15) 0 4px 8px 3px;
-}
-/* login button end */
-/* navigation bar end */
+/* login button css end*/
+/*navgation bar css end*/
 /* content start */
-    .container {
-      display: flex;
-      align-items: center;
-      justify-content: center
-    }
-  
-    img {
-      max-width: 80%;
-    }
-  
-    .image {
-      flex-basis: 40%
-    }
-  
-    .text {
-      font-size: 20px;
-      padding-left: 20px;
-    }
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+img {
+  max-width: 80%;
+}
+
+.image {
+  flex-basis: 40%
+}
+
+.text {
+  font-size: 20px;
+  padding-left: 20px;
+}
 /* content end */
