--- a/css_index.css
+++ b/css_index.css
@@ -1,43 +1,5 @@
-/*navgation bar css start*/
-/* #nav {
-  text-align: center;
-  font-size: 20px;
-  
-  color: white;
-} */
-/* #head1 {
-  display: inline-block;
-  font-family: Brush Script MT;
-  text-align:center;
-  color:white;
-  font-size:35px;
-  text-decoration: none;
-  
-}
-.topnav img{
-  margin:30px 30px 45px;
-  width:50px;
-  height:50px;
-}
-.topnav {
-  overflow: hidden;
- background-color: #333; 
-  height: 100px;
-  float: top;
-}
-.topnav a {
-  float: right;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  padding-top: 2.5%;
 
-} */
-*{
-  background-color: #ECECEC;
-}
+/*navbar start*/
 .topnav a:hover{
   cursor: pointer;
   color:#f2c55b;
@@ -60,6 +22,7 @@
   display:flex;
   align-items: center;
   justify-content: space-evenly;
+  
 }
 #head{
   /* padding-left:50px; */
@@ -67,8 +30,10 @@
   font-family:Brush Script MT;/* 'Marcellus'; */
   text-decoration: none;
   margin-left: 50px;
-  color:white;
-  z-index:0;
+  color:#ffffff;
+  z-index:1;
+  opacity: 1;
+  text-shadow: 1px 1px 3px black;
 }
 nav .name{
   display:flex;
@@ -84,6 +49,8 @@ nav .logo{
 }
 nav ul{
   align-items: center;
+  opacity: 10;
+  z-index:1;
 }
 nav ul li{
   list-style: none;
@@ -94,8 +61,10 @@ nav ul li{
 nav ul li a{
   text-decoration:none;
   font-size:20px;
-  outline-color: black;
+  /* outline-color: black; */
   outline-width: 100px;
+  text-shadow: 0.2px 0.2px 3px black;
+
 }
 /*login button css start*/
 #loginbutton{
@@ -167,7 +136,7 @@ div .video{
 }
 
 
-/* .video-container {
+.video-container {
   position: relative;
 }
 .video {
@@ -185,16 +154,15 @@ div .video{
   display: flex;
   align-items: last baseline;
   justify-content: center;
-  font-family: "Courier New";
+  font-family: 'Marcellus';
   color: wheat;
-} */
+}
 .container,.revcontainer,.containerelev{
   padding-top:120px;
   display:flex;
   width:100%;
   height:100%;
   justify-content: center;
-  background-color: #fafafa;
   
 }
 span{
@@ -361,37 +329,3 @@ span{
     font-size: 20px;
   }
 }
-/*
-* {
-  box-sizing: border-box;
-} */
-/* /* body {
-  font-family: 'Marcellus'; /*Verdana, sans-serif; 
-  margin: 0;
-}
-
-img {
-  vertical-align: middle;
-}
-/* login button css end
-/*navgation bar css end
-/* content start 
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-img {
-  max-width: 80%;
-}
-
-.image {
-  flex-basis: 40%
-}
-
-.text {
-  font-size: 20px;
-  padding-left: 20px;
-} 
-content end */
